<resources>
    <string name="app_name">Kalorilaskuri</string>
    <string name="eat">Eat</string>
    <string name="todo">TODO</string>
    <string name="totalCount">Total kilocalories:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="incorrect_attempts">Incorrect attempts</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="email">Email</string>
    <string name="userpassword">Password</string>
    <string name="name">Username</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit</string>
    <string name="e_mail">E-mail</string>
    <string name="password_lost">Password lost?</string>
    <string name="reset_email">Email</string>
    <string name="reset_password">Reset Password</string>
</resources>